third_party/move/move-compiler-v2/tests/checking/typing/type_variable_join_threaded_pack_invalid.exp

Diagnostics:
error: cannot return `Box<integer>` from a function with result type `Box<bool>`
   ┌─ tests/checking/typing/type_variable_join_threaded_pack_invalid.move:42:9
   │
42 │         b
   │         ^
